<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="new_session"
        android:enabled="true"
        android:icon="@android:drawable/ic_input_add"
        android:shortcutShortLabel="@string/shortcut_new_session"
        android:shortcutLongLabel="@string/shortcut_new_session_long">
        <intent
            android:action="com.nvterm.NEW_SESSION"
            android:targetPackage="com.nvterm"
            android:targetClass="com.novaterm.app.ui.MainActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="preset_claude"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_send"
        android:shortcutShortLabel="@string/shortcut_claude"
        android:shortcutLongLabel="@string/shortcut_claude_long">
        <intent
            android:action="com.nvterm.LAUNCH_PRESET"
            android:targetPackage="com.nvterm"
            android:targetClass="com.novaterm.app.ui.MainActivity">
            <extra android:name="preset" android:value="claude" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="preset_gemini"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_send"
        android:shortcutShortLabel="@string/shortcut_gemini"
        android:shortcutLongLabel="@string/shortcut_gemini_long">
        <intent
            android:action="com.nvterm.LAUNCH_PRESET"
            android:targetPackage="com.nvterm"
            android:targetClass="com.novaterm.app.ui.MainActivity">
            <extra android:name="preset" android:value="gemini" />
        </intent>
    </shortcut>
</shortcuts>
